overflow fixed

--- a/styles/site.less
+++ b/styles/site.less
@@ -55,9 +55,10 @@ html, body, .viewport {
     }
 
     .detail-text {
-
       padding-right: 10%;
-
+      max-height: 100%;
+      overflow: hidden;
+      
       .detail-text-header {
         font-family: 'Lato', sans-serif;
         font-size: 72px;
